--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="media/fav-icon.png" type="image/x-icon">
 
 </head>
 <body>
@@ -116,6 +117,10 @@
   </div>
 
 
+
+  <footer>
+    <p>Copyright © 2022 ZAMAN PROPERTY</p>
+  </footer>
 
   <!-- Script Link -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
