--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         <div class="card-body">
           <h3 class="card-title">Shohanuzzaman Omi</h3>
           <h5 class="card-title">Web Developer</h5>
-          <p class="card-text">I'm Shohanuzzaman Omi. I'm a designer who codes. I'm a web designer. I've worked internationally, in-house, and remotely on projects for leading brands, agencies, startups, and charities. I care deeply about creating world-class, useful, and beautiful Websites that help people and make a difference. I can be as involved in your project as you need me to be; from the seed of the idea to sketches, creative direction, design, and copywriting.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <p class="card-text" style="margin-top: 5%;">I'm Shohanuzzaman Omi. I'm a designer who codes. I'm a web designer. I've worked internationally, in-house, and remotely on projects for leading brands, agencies, startups, and charities. I care deeply about creating world-class, useful, and beautiful Websites that help people and make a difference. I can be as involved in your project as you need me to be; from the seed of the idea to sketches, creative direction, design, and copywriting.</p>
+          <button type="button" class="btn btn-dark for-mar">HIRE ME</button>
+          <p class="card-text"><small class="text-muted">Last updated 47 mins ago</small></p>
         </div>
       </div>
     </div>
@@ -118,8 +119,8 @@
 
 
 
-  <footer>
-    <p>Copyright © 2022 ZAMAN PROPERTY</p>
+  <footer class="mt-5 text-center">
+    <p> <big>Copyright © 2022 ZAMAN PROPERTY</big> </p>
   </footer>
 
   <!-- Script Link -->
